--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.6</version>
+			<type>maven-plugin</type>
+		</dependency>
 	</dependencies>
 
 	<build>
