--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,16 @@
 					</execution>
 				</executions>
 			</plugin>
-
+			<plugin>
+				<groupId>org.pitest</groupId>
+				<artifactId>pitest-maven</artifactId>
+				<version>1.6.4</version>
+				<configuration>
+					<excludedClasses>
+						<param>com.chschmid.jdotxt.gui.*</param>
+					</excludedClasses>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
